Feedback and updated standards development report for Assignment 0926.

--- a/usability-study/heuristic-evaluation/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation/heuristic-evaluation.tex
@@ -25,7 +25,7 @@ Amazon website designers understood that approaching account options in a way th
 
 \includegraphics[width=6in, height=4.5in]{Amazon2}
 
-Users would gravitate towards the payment section (highlighted in orange in the above graphic), but a disconnect between designer and user begins. The user would see the add credit card, and be able to successfully add. But, when they needed to delete a credit card, users would go to the "Add Credit Card" section and attempt to remove from there. Since credit card is what most users were looking for to complete the task, they would make an error and look in the entirely wrong section. Even though the "Add Credit Card" section clearly does not say delete, users would view the word "Credit Card" and instantly be drawn to the option. Amazon's web developers thought that the logical thing to do if you wanted to modify payment options would be "Manage Payment Options," but they also include a credit card adding option outside of that context. This is one of the biggest reasons why efficiency will suffer if someone desires to delete their credit card: instead of clicking "Manage Payment Options," they will be drawn to the word they have formulated in their mind (in this case, "credit card").
+Users would gravitate towards the payment section (highlighted in orange in the above graphic), but a disconnect between designer and user begins. The user would see the add credit card, and be able to successfully add. But, when they needed to delete a credit card, users would go to the ``Add Credit Card'' section and attempt to remove from there. Since credit card is what most users were looking for to complete the task, they would make an error and look in the entirely wrong section. Even though the ``Add Credit Card'' section clearly does not say delete, users would view the word ``Credit Card'' and instantly be drawn to the option. Amazon's web developers thought that the logical thing to do if you wanted to modify payment options would be ``Manage Payment Options,'' but they also include a credit card adding option outside of that context. This is one of the biggest reasons why efficiency will suffer if someone desires to delete their credit card: instead of clicking ``Manage Payment Options,'' they will be drawn to the word they have formulated in their mind (in this case, ``credit card'').
 
 \subsection{Test 3}
 Referencing the metrics taken, Amazon suffered in learnability as well as efficiency when it came to using the sidebar to find the Nokia Lumia 920.
@@ -34,7 +34,7 @@ One of the organizational guidelines for data display, published by Smith and Mo
 
 \includegraphics[width=6in, height=3.4in]{Amazon3}
 
-After looking at just the cell phones and accessories page, it becomes clear how inefficient Amazon's department search is. There are so many ways to narrow down the options that the user does not know where to begin. For example, the Nokia Lumia 920 is an AT\&T phone. It is sold with a contract, and it also can be sold unlocked as well. That presents two options to the users, but neither of those are part of the title. While there is plenty of information displayed, featured brands does not even list a "Nokia" option unless you scroll further down the page, which forces the user deeper into convolution. I conclude this point by saying that there is a lack of presentable data that assists the user with finding what they want from shopping online over looking through a store.
+After looking at just the cell phones and accessories page, it becomes clear how inefficient Amazon's department search is. There are so many ways to narrow down the options that the user does not know where to begin. For example, the Nokia Lumia 920 is an AT\&T phone. It is sold with a contract, and it also can be sold unlocked as well. That presents two options to the users, but neither of those are part of the title. While there is plenty of information displayed, featured brands does not even list a ``Nokia'' option unless you scroll further down the page, which forces the user deeper into convolution. I conclude this point by saying that there is a lack of presentable data that assists the user with finding what they want from shopping online over looking through a store.
 \section{eBay}
 \subsection{Test 1}
 Looking at this test, eBay surprisingly returned a high level of satisfaction, efficiency and learnability while searching for a USB flash drive. Below, I explain the reason why these results are a product of eBay's simplicity.
@@ -49,7 +49,7 @@ eBay struggles when it comes to credit cards. Since PayPal is designed to be lik
 In almost every case of the tests we ran to determine how usable a credit card is on eBay, the user would have difficulty interpreting the system image and how to reach a point where they could select a credit card instead of a PayPal account. Why? Because they would FIRST have to select PayPal as a payment method in order to use PayPal as a guest!
 \includegraphics[width=2in, height=1.5in]{eBay2}
 \includegraphics[width=4in, height=3in]{eBay3}
-As you can see in the image on the right, "Don't have a PayPal account?" only shows up after the user has selected Pay with PayPal. This led to a lack of user control as they became frustrated trying to find a method to continue forward. While I believed at first that this was a disconnect between the system the developer is creating and the system image the user is perceiving, in my later part of the study I found that certain eBay users have an actual credit card selector available to them!
+As you can see in the image on the right, ``Don't have a PayPal account?'' only shows up after the user has selected Pay with PayPal. This led to a lack of user control as they became frustrated trying to find a method to continue forward. While I believed at first that this was a disconnect between the system the developer is creating and the system image the user is perceiving, in my later part of the study I found that certain eBay users have an actual credit card selector available to them!
 
 \includegraphics[width=2in, height=1.5in]{eBay4} 
 
@@ -58,21 +58,28 @@ It was incredible to find out that there was an actual method to attain this. Bu
 While eBay provided an ease of learnability, it lacked efficiency and satisfaction. Below I will outline the reasons why finding a Lumia 920 on eBay can be a cumbersome process.
 \subsubsection{A need for universal usability mixed with Fitt's Law}
 \includegraphics[width=6in, height=3.5in]{eBay5}
-Seen above is an example of a cell phone search by department. Clearly, a few of the top brands can be seen. This definitely caters to novices, while also providing a "see all" option for users with more experience. The problem is if a novice user is looking for a phone that is not listed in those options, the size of "see all" when considered with Fitt's Law demonstrates the lack of efficiency for users searching for the Nokia Lumia 920. Some did not even see the option at all in our Usability Testing, which leads me to believe that both universal usability and Fitt's Law are the solution to the problem. The power of the sidebar is there, and the web developers at eBay have built a powerful system; now, it is their job to improve the system image for their users.
+Seen above is an example of a cell phone search by department. Clearly, a few of the top brands can be seen. This definitely caters to novices, while also providing a ``see all'' option for users with more experience. The problem is if a novice user is looking for a phone that is not listed in those options, the size of ``see all'' when considered with Fitt's Law demonstrates the lack of efficiency for users searching for the Nokia Lumia 920. Some did not even see the option at all in our Usability Testing, which leads me to believe that both universal usability and Fitt's Law are the solution to the problem. The power of the sidebar is there, and the web developers at eBay have built a powerful system; now, it is their job to improve the system image for their users.
+% JD: Note that Fitts's Law is about *hitting* a target, not *finding* it.  Your point remains
+%     valid, but it just gets associated with the incorrect principle.  This is simple visibility
+%     of an option, not Fitts's Law.  Now, if you timed how long it takes for a user to click that
+%     option (where the user already knows where it is), *then* you would be looking at Fitts's
+%     Law as a factor.
 \section{Shopzilla}
 \subsection{Test 1}
 Shopzilla's interface to comply with Test 1's search for a flash drive was easy to learn, but suffers from a lack of efficiency and satisfaction. Below, I detail why the interaction of the user with Shopzilla is at times difficult.
 \subsubsection{A lack of organization in Shopzilla's aggregation}
 Shopzilla's job is to aggregate results from multiple shopping sites to provide a wealth of information for the consumer, informing them and allowing them to buy the product they want at the best price. Aggregate shopping websites, such as Google Shopping, work well for certain items. Nevertheless, Shopzilla suffer from flaws in their own display of data and their compilation of multiple websites into their search results. Many of the users in testing had trouble finding a flash drive they wanted, as results that returned from their search would lead to website results with non-working links, or provided returned results that did not match the search term. This led to frustration, and caused an extreme decline in user satisfaction. They felt powerless as the automated search returned results that were irrelevant to their goals. It also hindered efficiency, as users spent more time scrolling to find a result that matched what they were looking for (in this case, some form of flash drive).
 \subsection{Test 2}
-Test 2 on Shopzilla was not performed because this is a point that should strictly be addressed using heuristic analysis. The reason why is due to the fact that Shopzilla does not support any form of payment methods; it links to other stores while compiling a list of all possible items online matching your search result. If one considers the endless amount of shopping websites, it brings into clarity the sheer amount of times you may have to reenter your information while shopping on Shopzilla. I believe that this presents a problem to the user, in the context of the Stages-of-Action Theory. There is a "gulf in execution"; that the user wants to be able to have a way to purchase easily from all of these sites, but they don't understand the possibility that Shopzilla could act as a bridge to pay instead of re-entering your information endlessly. Using these principles, Shopzilla could actually implement a payment method that would make it easier for users to purchase items while still maintaining a philosophy of aggregated shopping results. 
+Test 2 on Shopzilla was not performed because this is a point that should strictly be addressed using heuristic analysis. The reason why is due to the fact that Shopzilla does not support any form of payment methods; it links to other stores while compiling a list of all possible items online matching your search result. If one considers the endless amount of shopping websites, it brings into clarity the sheer amount of times you may have to reenter your information while shopping on Shopzilla. I believe that this presents a problem to the user, in the context of the Stages-of-Action Theory. There is a ``gulf in execution;'' that the user wants to be able to have a way to purchase easily from all of these sites, but they don't understand the possibility that Shopzilla could act as a bridge to pay instead of re-entering your information endlessly. Using these principles, Shopzilla could actually implement a payment method that would make it easier for users to purchase items while still maintaining a philosophy of aggregated shopping results. 
 \subsection{Test 3}
 In Test 3, Shopzilla had average to poor scores in learnability and satisfaction, but the best score in efficiency. I will explain why I believe the results were this way searching departmentally was more efficient for Shopzilla at the cost of learnability and satisfaction.
 \subsubsection{The Kitchen-Sink Approach without the Joy of Use}
 \includegraphics[width=6in, height=3.5in]{Shopzilla1}
 Shopzilla has clearly designed a user interface based on endless options and endless parameters at the expense of satisfaction. The user interface is very basic-looking, and is filled with boring text, photos, and colors. Shopzilla's boring design is powerful for the user, if they utilize it correctly. It's just not particularly satisfying, and it makes it difficult for the user to form a good conceptual model of how they want to approach the task. If Shopzilla improves the graphical user interface of their site, it will result in a drastic improvement in learnability and satisfaction, and will continue to improve on the great efficiency already proven and recorded in the Usability Study.
 \section{Conclusion}
-To conclude, I believe there are ways each online shopping site can improve. With Amazon, I believe adding some kind of virtualized "WindowShop" mode will provide the user with a department search that feels like actually shopping at a brick-and-mortar store, solving the problems of the Lumia 920 test. With eBay, making credit cards through PayPal a more prominent option and providing an interface that utilizes universal usability and Fitt's Law will go a long way to improve the lacking pay experience. And with Shopzilla, a strong GUI redesign for the department section as well as a payment system where Shopzilla handles the transaction would improve the user experience.
-
+To conclude, I believe there are ways each online shopping site can improve. With Amazon, I believe adding some kind of virtualized ``WindowShop'' mode will provide the user with a department search that feels like actually shopping at a brick-and-mortar store, solving the problems of the Lumia 920 test. With eBay, making credit cards through PayPal a more prominent option and providing an interface that utilizes universal usability and Fitt's Law will go a long way to improve the lacking pay experience. And with Shopzilla, a strong GUI redesign for the department section as well as a payment system where Shopzilla handles the transaction would improve the user experience.
+% JD: This conclusion works as a constructive criticism of each system's current design.  Wouldn't it be great
+%     to see these changes made, then to run the tests again, to see if the results show measurable improvement?
+%     For the moment, we can only dream LOL.
 
 \end{document}  
