--- a/usability-study/usability-metrics/usability-metrics.tex
+++ b/usability-study/usability-metrics/usability-metrics.tex
@@ -17,10 +17,13 @@
 \section{Introduction}
 For our tests, we chose the world of online shopping. For our shopping websites, we chose Amazon, eBay, and Shopzilla.
 For our three metrics, we chose learnability, efficiency, and satisfaction. Learnability is on a scale from 1-5: 1 being difficult to familiarize with, 5 being easy to accomplish the task. Efficiency is measured by seconds of completion. Satisfaction is based on a 1-10 scale: 1 being absolutely unhappy, 10 being extremely satisfied.  For our three tests, we chose:
+% JD: Actually, no, learnability is measured in terms of time, just like efficiency.
+%     Acknowledged that this is harder to measure, but still, the point remains that
+%     learnability is still a temporal metric.
 
 \begin{enumerate}
     \item Buying a product: a USB stick (test subject was told to find a USB stick they would personally buy)
-    \item Profile change: adding and a credit card number
+    \item Profile change: adding and a credit card number % JD: Typo here?
     \item Narrowing a product down simply by using the navigation provided: Nokia Lumia 920
 \end{enumerate}
 
@@ -31,9 +34,11 @@ Here is a summary of each user and their overall proficiencies:
 \begin{enumerate}
     \item This user is a Modern Languages major with a decent amount of experience of shopping on line.
     \item This user is an English major who doesn't really shop online, yet has a strong domain knowledge about computers.
+    % JD: Domain knowledge is about shopping; technology knowledge is what pertains to the method,
+    %     which in this case is by computer and online.
     \item This user is a Computer Science major who shops a decent amount online.
     \item This user is a Computer Science major who shops pretty often online.
-    \item This user is a Computer Science major who shops less than normal.
+    \item This user is a Computer Science major who shops less than normal. % JD: Just online, or any kind of shopping at all?
 \end{enumerate}
 
 \section{Tests}
@@ -46,6 +51,10 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
 
 \subsubsection{User \#1}
 
+% JD: Notice the gap that emerges here to the reader with regard to learnability,
+%     which is: where did those scores come from?  Efficiency is clear, and satisfaction
+%     is known to be somewhat subjective so the scores that show up are not called into
+%     question as much.
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -106,7 +115,8 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
 
 \subsection{Analysis}
 
-The learnability is equal amongst all three shopping websites because finding a USB stick isn't too hard. Shopzilla had pop-ups showing direct checkout for certain products which made learnability higher for that shopping website. eBay made it very easy to arrive to checkout. The overall interface of the website did not clearly determine a "winner" in terms of learnability. The efficiency is also fairly equal amongst all websites (due to the fact that the times for Shopzilla and eBay are up to checkout). Satisfaction was also fairly in the same level. Satisfaction is partially related to website appeal, so this metric is somewhat subjective. There was mention that the pop-up of the two day shipping hindered results for Amazon, but this simply seems like a personal preference.
+The learnability is equal amongst all three shopping websites because finding a USB stick isn't too hard. Shopzilla had pop-ups showing direct checkout for certain products which made learnability higher for that shopping website. eBay made it very easy to arrive to checkout. The overall interface of the website did not clearly determine a ``winner'' in terms of learnability. The efficiency is also fairly equal amongst all websites (due to the fact that the times for Shopzilla and eBay are up to checkout). Satisfaction was also fairly in the same level. Satisfaction is partially related to website appeal, so this metric is somewhat subjective. There was mention that the pop-up of the two day shipping hindered results for Amazon, but this simply seems like a personal preference.
+% JD: But if you timed things with learnability, you *might* have gotten a potential winner!
 
 \subsection{Profile change: Add credit card number}
     
@@ -174,7 +184,14 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
 
 \subsection{Analysis}
 
-This test was fairly interesting. Since Shopzilla was out of the running, it came down to Amazon and eBay. The learnability for Amazon was interesting because there are so many options for the user too look though. The link "Manage Payment Options" is not the most revealing of titles. In one of the test cases, the user had to use the search bar to find out how to remove a credit card for Amazon (not a test, yet interesting). For eBay, a user had to search google to figure out how to pay as a guest using PayPal.  Efficiency for Amazon was "slower" due to having more options for the user to look through.
+This test was fairly interesting. Since Shopzilla was out of the running, it came down to Amazon and eBay. The learnability for Amazon was interesting because there are so many options for the user too look though. The link ``Manage Payment Options'' is not the most revealing of titles. In one of the test cases, the user had to use the search bar to find out how to remove a credit card for Amazon (not a test, yet interesting). For eBay, a user had to search google to figure out how to pay as a guest using PayPal.  Efficiency for Amazon was ``slower'' due to having more options for the user to look through.
+% JD: Here's where a distinction emerges between learnability and efficiency.  From the sound
+%     of it, your timing included *how long it took for a user to figure things out*.  THIS
+%     is learnability.  Efficiency would be for when a user already knows what to do.  *Then*
+%     you would time them (ideally multiple times) in terms of how long it takes to go through
+%     steps *that they already know*.  *That* is efficiency.  As written, it sounds like you
+%     have some glommed-together timing data which mixes both metrics.  Ideally, the difference
+%     is cleaner.
 
 \subsection{List filtering for Nokia Lumia 920}
 
@@ -240,9 +257,20 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
 
 \subsection{Analysis}
 The learnability for the list filtering did not come to a real clear winner. Every site had some issues using their list navigation for finding the particular phone that we were looking for. In terms of efficiency, Shopzilla blows the other two out of the water. Satisfaction was led by Amazon just slightly.
+% JD: Same here---how much of these times involved "figuring things out" vs. actually
+%     performing the action?  The first part is learnability; the second is efficiency.
 
 \section{Overall Analysis}
 
 According to the results, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
+% JD: Appropriate conclusion given the measures that were taken.  As noted, the
+%     measures themselves are a little murky.
+%
+%     The bigger issue is that you have a *per-metric* "winner" only.  That is
+%     easy to derive; more difficult is your determination of an *overall* winner.
+%     True, that winner may not be ideal, but if you had to pick one, what would
+%     it be?  Note that this requires a notion of priority.  For this application,
+%     which metric would be the most important?  Least?  Based on your determination
+%     of this priority, some argument can be made about a single overall winner.
 
-\end{document}  
+\end{document}
