Setting up essay parameters

--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -8,20 +8,21 @@
 \usepackage{epstopdf}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{ESSAY}
+\title{Evaluating the Mobile Operating System Effectively}
 \author{Edward Bramanti}
 %\date{}                                           % Activate to display a given date or no date
 
 \begin{document}
 \maketitle
-\section{Abstract}
+\begin{abstract}
+\end{abstract}
 \section{Introduction}
 \section{Background}
 \section{Methods}
 \section{Discussion}
 \section{Conclusion}
-\section{References}
 
-
+\bibliographystyle{alpha}
+\bibliography{mental-model-paper-bib}
 
 \end{document}  
