Testing out bibliography functionality

--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -17,13 +17,13 @@
 \begin{abstract}
 \end{abstract}
 \section{Introduction}
-In today's world, mobile operating systems are now as prevalent as personal computers. More and more, consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. This had led to many groups reviewing the many choices of mobile operating systems available to consumers. In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
+In today's world, mobile operating systems are now as prevalent as personal computers. More and more, consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. This had led to many groups reviewing the many choices of mobile operating systems available to consumers. In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.\cite{Thingy}
 \section{Background}
 \section{Methods}
 \section{Discussion}
 \section{Conclusion}
 
 \bibliographystyle{alpha}
-\bibliography{mental-model-paper-bib}
+\bibliography{mental-model-paper}
 
 \end{document}  
