Beginning background and adding sources

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -1,10 +1,18 @@
 % mental-model-paper-bib.bib
 % A BibTeX database file.
 
-@book{
-	Thingy,
-	author = {Derp},
-	title = {Hello},
-	publisher = {dude},
-	year = {1993}
+@article{
+	PatentWars,
+	author = {},
+	title = {The Impact of Patent Wars on Firm Strategy: Evidence from the Global Smartphone Market},
+	publisher = {}
+	year = {}
+}
+
+@article{
+	Pfeiffer,
+	author = {Pfeiffer Consulting},
+	title = {How iOS 7 Stacks Up: Smartphone OS User Experience Shootout},
+	publisher = {Pfeiffer Consulting},
+	year = {2013}
 }
