Developer perspective 1st draft, moving on to user

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -16,3 +16,22 @@
 	publisher = {Pfeiffer Consulting},
 	year = {2013}
 }
+
+@inproceedings{
+ Palme,
+ author = {Palme, Elia and Tan, Chuan-Hoo and Sutanto, Juliana and Phang, Chee Wei},
+ title = {Choosing the smart phone operating system for developing mobile applications},
+ booktitle = {Proceedings of the 12th International Conference on Electronic Commerce: Roadmap for the Future of Electronic Business},
+ series = {ICEC '10},
+ year = {2010},
+ isbn = {978-1-4503-1427-5},
+ location = {Honolulu, Hawaii},
+ pages = {146--152},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/2389376.2389397},
+ doi = {10.1145/2389376.2389397},
+ acmid = {2389397},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {buyer's choice, market development, market growth potential, mobile commerce, operating systems, security, smart phone},
+} 
