End-user Background almost complete, continuing with methods analysis

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -3,10 +3,10 @@
 
 @article{
 	PatentWars,
-	author = {},
+	author = {Yongwook Paik and Feng Zhu},
 	title = {The Impact of Patent Wars on Firm Strategy: Evidence from the Global Smartphone Market},
-	publisher = {}
-	year = {}
+	publisher = {Harvard Business School},
+	year = {2013}
 }
 
 @article{
@@ -35,3 +35,31 @@
  address = {New York, NY, USA},
  keywords = {buyer's choice, market development, market growth potential, mobile commerce, operating systems, security, smart phone},
 } 
+
+@article{
+ Coutaz,
+ author = {Coutaz, Jo\"{e}lle and Crowley, James L. and Dobson, Simon and Garlan, David},
+ title = {Context is key},
+ journal = {Commun. ACM},
+ issue_date = {March 2005},
+ volume = {48},
+ number = {3},
+ month = mar,
+ year = {2005},
+ issn = {0001-0782},
+ pages = {49--53},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1047671.1047703},
+ doi = {10.1145/1047671.1047703},
+ acmid = {1047703},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@misc{
+Aviate,
+    author = {Martin Bryant},
+    title = {Aviate: A gorgeous and smart new Android homescreen built for the age of context},
+    url = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/},
+    howpublished = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/}
+}
